2015-02-10 Fixed parsing HTML in Text Audio module
2015-02-10 Added "Start from" property in Page Counter module
2015-02-09 Revert parsing HTML in Text Audio module
2015-02-09 Added Is Not Activity property in Hangman module
2015-02-09 Fixed counting score in Count and Graph module
2015-02-09 Fixed reacting to Show Answers events in Double State Button and Single State Button modules
2015-02-09 Added getView(), show() and hide() commands to Error Counter module
2015-02-06 Added parsing HTML in Text Audio module
2015-02-06 Fixed issue with Show Answer in Shape Tracing module
2015-02-06 Added new css class to Basic Math Gaps module 
2015-02-06 Added Show Answers to Count and Graph module
2015-02-06 Added new property Signs to to Basic Math Gaps module
2015-02-05 Added translations for almost all remaining addons properties names
2015-02-05 Fixed problem with scaling enlarged image in Zoom Image module
2015-02-04 Changed icon and translated property names in Sudoku module
2015-02-02 Fixed PageProgress score alignment when command Show is executed after ShowErrosEvent
2015-02-02 Added getItem() command to Source List module
2015-01-29 Fixed swiping the slides in Slideshow module
2015-01-29 Added Menu Panel module
2015-01-29 Added new property Gap width to Basic Math Gaps module
2015-01-28 Added Show Answers to Memo Game module
2015-01-26 Added Show Answers to Text Identification module
2015-01-26 TextAudio supports play vocabulary from one merged audio file
2015-01-23 Added Show Answers to Connecting Dots module
2015-01-23 Fixed issue with Hide and Stand Area in IWB Toolbar
2015-01-23 Fixed issue with backward compatibility in IWB Toolbar module
2015-01-22 Added Show Answers to Magic Boxes module
2015-01-22 Added Show Answers to Shape Tracing module
2015-01-22 Changed visibility of drawing in IWB Toolbar module
2015-01-20 Added translations of addons properties names
2015-01-20 Fixed issue with ignore punctuation and accented letters in Text module